# fmcooler

./: README.md  fmcooler.py  main.py  pyproject.toml
examples/: big.csv  chat.uvl  faq.csv  faq.uvl  mobile.csv  mobile.uvl  mobile_media.csv  mobile_media.uvl  security.uvl  ulinux.csv  ulinux.uvl
output/: mobile_Battery_min_10.out  mobile_Usability_max_10.out
src/: utils.py
